[package]
name = "rwaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
mysql_common = "*"
libpcap = "*"
rand = "*"
pnet = "*"
pnet_transport = "*"
clap = "*"
execute = "*"
lettre = "*"
# lettre_email = "*"